[SCH]stub/libmsprofiler.so
Match-id-76c6dc25af88bac6c5e65bad3759bbcabcfdc754

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,8 @@
 cmake_minimum_required(VERSION 3.14.1)
 
 project(msprof)
-
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(INSTALL_DIR ${TOP_DIR}/install})
+set(INSTALL_DIR ${TOP_DIR}/install)
 
 add_subdirectory(opensource)
 add_subdirectory(collector)
